# mesa-lima

./: .gitignore  .mailmap  .travis.yml  Android.common.mk  Android.mk  Makefile.am  README.intel-vulkan.txt  REVIEWERS  SConstruct  VERSION  appveyor.yml  common.py  configure.ac  meson.build  meson_options.txt
src/egl/: .gitignore  Android.mk  Makefile.am  Makefile.sources  SConscript  egl-entrypoint-check  egl-symbols-check  meson.build
src/egl/drivers/dri2/: .gitignore  Android.mk  Makefile.am  egl_dri2.c  egl_dri2.h  egl_dri2_fallbacks.h  platform_android.c  platform_drm.c  platform_surfaceless.c  platform_wayland.c  platform_x11.c  platform_x11_dri3.c  platform_x11_dri3.h
src/egl/drivers/haiku/: SConscript  egl_haiku.cpp
src/egl/generate/: eglFunctionList.py
src/egl/main/: Android.mk  Makefile.am  Makefile.sources  SConscript  eglapi.c  eglapi.h  eglarray.c  eglarray.h  eglcompiler.h  eglconfig.c  eglconfig.h  eglcontext.c  eglcontext.h  eglcurrent.c  eglcurrent.h  egldefines.h  egldisplay.c  egldisplay.h  egldriver.c  egldriver.h  eglentrypoint.h  eglfallbacks.c  eglglobals.c  eglglobals.h  eglimage.c  eglimage.h  egllog.c  egllog.h  eglmisc.c  eglmutex.h  eglscreen.c  eglscreen.h  eglsurface.c  eglsurface.h  eglsync.c  eglsync.h  egltypedefs.h
src/egl/wayland/wayland-drm/: Makefile.am  meson.build  wayland-drm.c  wayland-drm.h
src/egl/wayland/wayland-egl/: Makefile.am  meson.build  wayland-egl-abi-check.c  wayland-egl-backend.h  wayland-egl-priv.h  wayland-egl-symbols-check  wayland-egl.c
src/gallium/: Android.common.mk  Android.mk  Automake.inc  Makefile.am  SConscript  meson.build
src/gallium/auxiliary/: Android.mk  Makefile.am  Makefile.sources  SConscript  meson.build
src/gallium/auxiliary/cso_cache/: cso_cache.c  cso_context.c  cso_context.h
src/gallium/auxiliary/draw/: draw_cliptest_tmp.h  draw_context.c  draw_context.h  draw_gs.c  draw_gs.h  draw_llvm.c  draw_llvm.h  draw_llvm_sample.c  draw_pipe_aaline.c  draw_pipe_aapoint.c  draw_pipe_clip.c  draw_pipe_cull.c  draw_pipe_flatshade.c  draw_pipe_offset.c  draw_pipe_pstipple.c  draw_pipe_stipple.c  draw_pipe_twoside.c  draw_pipe_unfilled.c  draw_pipe_validate.c  draw_pipe_vbuf.c  draw_pipe_wide_line.c  draw_pipe_wide_point.c  draw_prim_assembler.c  draw_private.h  draw_pt.c  draw_pt_emit.c  draw_pt_fetch_shade_pipeline.c  draw_pt_fetch_shade_pipeline_llvm.c  draw_pt_post_vs.c  draw_pt_so_emit.c  draw_pt_vsplit.c  draw_pt_vsplit_tmp.h  draw_vertex.h  draw_vs.c  draw_vs.h  draw_vs_exec.c
src/gallium/auxiliary/driver_ddebug/: dd_util.h
src/gallium/auxiliary/gallivm/: lp_bld_arit.c  lp_bld_arit.h  lp_bld_const.c  lp_bld_conv.c  lp_bld_debug.cpp  lp_bld_debug.h  lp_bld_flow.c  lp_bld_flow.h  lp_bld_format.h  lp_bld_format_aos.c  lp_bld_format_aos_array.c  lp_bld_format_cached.c  lp_bld_format_soa.c  lp_bld_format_srgb.c  lp_bld_format_yuv.c  lp_bld_gather.c  lp_bld_init.c  lp_bld_init.h  lp_bld_intr.c  lp_bld_intr.h  lp_bld_limits.h  lp_bld_logic.c  lp_bld_misc.cpp  lp_bld_misc.h  lp_bld_pack.c  lp_bld_pack.h  lp_bld_printf.c  lp_bld_sample.c  lp_bld_sample.h  lp_bld_sample_aos.c  lp_bld_sample_soa.c  lp_bld_struct.c  lp_bld_swizzle.c  lp_bld_tgsi.c  lp_bld_tgsi.h  lp_bld_tgsi_action.c  lp_bld_tgsi_action.h  lp_bld_tgsi_aos.c  lp_bld_tgsi_info.c  lp_bld_tgsi_soa.c  (+1 more)
src/gallium/auxiliary/hud/: hud_context.c  hud_context.h  hud_cpu.c  hud_cpufreq.c  hud_diskstat.c  hud_driver_query.c  hud_nic.c  hud_private.h  hud_sensors_temp.c
src/gallium/auxiliary/indices/: u_indices.c  u_indices.h  u_indices_gen.py  (+3 more)
src/gallium/tests/: meson.build
src/gbm/: Android.mk  Makefile.am  Makefile.sources  gbm-symbols-check  meson.build
src/gbm/main/: common_drm.h  gbm.c  gbm.h  gbmint.h
src/intel/isl/: .gitignore  Android.mk  Makefile.am  Makefile.sources  gen_format_layout.py  isl.c  isl.h  isl_drm.c  isl_emit_depth_stencil.c  isl_format.c  isl_format_layout.csv  isl_format_layout_gen.bash  isl_gen4.c  isl_gen4.h  isl_gen6.c  isl_gen6.h  isl_gen7.c  isl_gen7.h  isl_gen8.c  isl_gen8.h  isl_gen9.c  isl_gen9.h  isl_genX_priv.h  isl_image.c  isl_priv.h  isl_storage_image.c  isl_surface_state.c  meson.build
src/intel/tools/: .gitignore  Makefile.am  aubinator.c  aubinator_error_decode.c  decoder.c  decoder.h  disasm.c  gen_batch_decoder.c  gen_disasm.h  meson.build
src/intel/vulkan/: .gitignore  Android.mk  Makefile.am  Makefile.sources  TODO  anv_allocator.c  anv_android.c  anv_batch_chain.c  anv_blorp.c  anv_cmd_buffer.c  anv_descriptor_set.c  anv_device.c  anv_dump.c  anv_entrypoints_gen.py  anv_extensions.py  anv_extensions_gen.py  anv_formats.c  anv_gem.c  anv_gem_stubs.c  anv_genX.h  anv_gen_macros.h  anv_icd.py  anv_image.c  anv_intel.c  anv_meta.c  anv_meta.h  anv_meta_blit.c  anv_meta_blit2d.c  anv_meta_clear.c  anv_meta_copy.c  anv_meta_resolve.c  anv_nir.h  anv_nir_apply_dynamic_offsets.c  anv_nir_apply_pipeline_layout.c  anv_nir_lower_input_attachments.c  anv_nir_lower_multiview.c  anv_nir_lower_push_constants.c  anv_nir_lower_ycbcr_textures.c  anv_pass.c  anv_pipeline.c  (+34 more)
src/vulkan/: .gitignore  Android.mk  Makefile.am  Makefile.sources  allocator.c  anv_allocator.c  anv_aub.c  anv_batch_chain.c  anv_cmd_buffer.c  anv_cmd_emit.c  anv_compiler.cpp  anv_descriptor_set.c  anv_device.c  anv_dump.c  anv_entrypoints_gen.py  anv_formats.c  anv_gem.c  anv_gem_stubs.c  anv_gen8.c  anv_icd.json.in  anv_image.c  anv_intel.c  anv_meta.c  anv_meta.h  anv_meta_blit.c  anv_meta_clear.c  anv_meta_clear.h  anv_meta_resolve.c  anv_nir.h  anv_nir_apply_dynamic_offsets.c  anv_nir_apply_pipeline_layout.c  anv_nir_builder.h  anv_nir_lower_push_constants.c  anv_pass.c  anv_pipeline.c  anv_private.h  anv_query.c  anv_util.c  anv_wsi.c  anv_wsi.h  (+56 more)
src/vulkan/registry/: vk.xml
src/vulkan/tests/: .gitignore  Makefile.am  block_pool_no_free.c  state_pool.c  state_pool_free_list_only.c  state_pool_no_free.c
src/vulkan/util/: Makefile.am  gen_enum_to_str.py
src/vulkan/wsi/: Makefile.am  meson.build  wsi_common.c  wsi_common.h  wsi_common_private.h  wsi_common_queue.h  wsi_common_wayland.c  wsi_common_x11.c  wsi_common_x11.h
(+3715 files in other folders)
